@startuml
'https://plantuml.com/class-diagram


abstract class ParentEntity {
    id : Int
}

class Dog {
    name : String
}

class ParentEntityListener {
    onCreation(ParentEntity)
    onUpdate(ParentEntity)
}


interface DogRepository {
    save(Dog)
}

class DogRepositoryImpl {
    save(Dog)
}

ParentEntity <|-- Dog
ParentEntity --> ParentEntityListener : reference
DogRepositoryImpl --> ParentEntityListener : call
DogRepository <|-- DogRepositoryImpl

@enduml